Added ugrep GREP_PATH environment variable

--- a/man/ugrep.1
+++ b/man/ugrep.1
@@ -1,10 +1,11 @@
-.TH UGREP "1" "May 01, 2019" "ugrep 1.1.0" "User Commands"
+.TH UGREP "1" "May 02, 2019" "ugrep 1.1.0" "User Commands"
 .SH NAME
 \fBugrep\fR -- universal file pattern searcher
 .SH SYNOPSIS
 .B ugrep
 [\fB-bcEFfGgHhikLlmnoqsTtVvwXxZz\fR] [\fB--colour\fR[=\fIwhen\fR]|\fB--color\fR[=\fIwhen\fR]]
-      [\fB-e\fR \fIpattern\fR] [--label[=label]] [\fIpattern\fR] [\fIfile\fR \fI...\fR]
+      [\fB--file-format\fR=\fIencoding\fR] [\fB--label\fR[=\fIlabel\fR]]
+      [\fB-e\fR \fIpattern\fR] [\fIpattern\fR] [\fIfile\fR \fI...\fR]
 .SH DESCRIPTION
 The \fBugrep\fR utility searches any given input files, selecting lines that
 match one or more patterns.  By default, a pattern matches an input line if the
@@ -17,7 +18,8 @@ search for Unicode patterns in text files encoded in UTF-8, UTF-16, UTF-32 by
 detecting UTF BOM in the input.  When no UTF BOM is detected, \fBugrep\fR
 searches for Unicode patterns in UTF-8 input, which includes ASCII input.
 \fBugrep\fR searches input files encoded in ISO-8859-1, EBCDIC, CP-437, CP-850,
-CP-858, CP-1250 to CP-1258 when the file format is specified as an option.
+CP-858, CP-1250 to CP-1258 when the file encoding format is specified with
+option --file-format.
 .PP
 The following options are available:
 .TP
@@ -50,11 +52,13 @@ Interpret pattern as a set of fixed strings (i.e. force ugrep to
 behave as fgrep but less efficiently).
 .TP
 \fB\-f\fR file, \fB\-\-file\fR=\fIfile\fR
- Read one or more newline separated patterns from file.  Empty
- pattern lines match every input line.
+Read one or more newline separated patterns from file.  Empty
+pattern lines in the file are ignored.  Options \fB\-F\fR, \fB\-w\fR, and \fB\-x\fR
+do not apply to these patterns.  If file does not exist, uses
+the GREP_PATH environment variable to open file.
 .TP
-\fB\-\-file\-format\fR=\fIformat\fR
-The input file format.  The possible values of format can be:
+\fB\-\-file\-format\fR=\fIencoding\fR
+The input file format.  The possible values of encoding can be:
 binary ISO\-8859\-1 ASCII EBCDIC UTF\-8 UTF\-16 UTF\-16BE UTF\-16LE
 UTF\-32 UTF\-32BE UTF\-32LE CP437 CP850 CP1250 CP1251 CP1252
 CP1253 CP1254 CP1255 CP1256 CP1257 CP1258
@@ -141,15 +145,15 @@ Selected lines are those not matching any of the specified
 patterns.
 .TP
 \fB\-w\fR, \fB\-\-word\-regexp\fR
-The pattern is searched for as a word (as if surrounded by
-`\\<' and `\\>').
+The pattern or \fB\-e\fR patterns are searched for as a word (as if
+surrounded by `\\<' and `\\>').
 .TP
 \fB\-X\fR, \fB\-\-free\-space\fR
 Spacing (blanks and tabs) in regular expressions are ignored.
 .TP
 \fB\-x\fR, \fB\-\-line\-regexp\fR
-Only input lines selected against an entire pattern are considered
-to be matching lines (as if surrounded by ^ and $).
+Only input lines selected against the entire pattern or \fB\-e\fR patterns
+are considered to be matching lines (as if surrounded by ^ and $).
 .TP
 \fB\-Z\fR, \fB\-\-null\fR
 Prints a zero\-byte after the file name.
@@ -179,6 +183,10 @@ No lines were selected.
 .IP >1
 An error occurred.
 .SH ENVIRONMENT
+.IP \fBGREP_PATH\fR
+May be used to specify a file path to pattern files.  The file path is used by
+option -f to open a pattern file, when the file specified with option -f cannot
+be opened.
 .IP \fBGREP_COLOR\fR
 May be used to specify ANSI SGR parameters to highlight matches when option
 \fB--color\fR is used, e.g. 1;35;40 shows pattern matches in bold magenta text
