--- a/man/ugrep.1
+++ b/man/ugrep.1
@@ -1,4 +1,4 @@
-.TH UGREP "1" "May 02, 2019" "ugrep 1.1.0" "User Commands"
+.TH UGREP "1" "May 06, 2019" "ugrep 1.1.0" "User Commands"
 .SH NAME
 \fBugrep\fR -- universal file pattern searcher
 .SH SYNOPSIS
@@ -23,42 +23,61 @@ option --file-format.
 .PP
 The following options are available:
 .TP
+\fB\-A\fR NUM, \fB\-\-after\-context\fR=\fINUM\fR
+Print NUM lines of trailing context after matching lines.  Places
+a line containing \fB\-\-\fR between contiguous groups of matches.  See
+also the \fB\-B\fR and \fB\-C\fR options.
+.TP
+\fB\-B\fR NUM, \fB\-\-before\-context\fR=\fINUM\fR
+Print NUM lines of leading context before matching lines.  Places
+a line containing \fB\-\-\fR between contiguous groups of matches.  See
+also the \fB\-A\fR and \fB\-C\fR options.
+.TP
 \fB\-b\fR, \fB\-\-byte\-offset\fR
-The offset in bytes of a matched pattern is displayed in front of
-the respective matched line.
+The offset in bytes of a matched line is displayed in front of the
+respective matched line.  With option \fB\-g\fR displays the offset in
+bytes of each pattern matched.
+.TP
+\fB\-C\fR[NUM], \fB\-\-context\fR[=\fI\fR\fINUM\fR]
+Print NUM lines of leading and trailing context surrounding each
+match.  The default is 2 and is equivalent to \fB\-A\fR 2 \fB\-B\fR 2.  Places
+a line containing \fB\-\-\fR between contiguous groups of matches.  Note:
+no whitespace may be given between the option and its argument.
 .TP
 \fB\-c\fR, \fB\-\-count\fR
 Only a count of selected lines is written to standard output.
 When used with option \fB\-g\fR, counts the number of patterns matched.
+With option \fB\-v\fR, counts the number of non\-matching lines.
 .TP
-\fB\-\-colour\fR[=\fI\fR\fIwhen\fR], \fB\-\-color\fR[=\fI\fR\fIwhen\fR]
+\fB\-\-colour\fR[=\fI\fR\fIWHEN\fR], \fB\-\-color\fR[=\fI\fR\fIWHEN\fR]
 Mark up the matching text with the expression stored in the
 GREP_COLOR or GREP_COLORS environment variable.  The possible
-values of when can be `never', `always' or `auto'.
+values of WHEN can be `never', `always' or `auto'.
 .TP
 \fB\-E\fR, \fB\-\-extended\-regexp\fR
 Interpret patterns as extended regular expressions (EREs). This is
 the default.
 .TP
-\fB\-e\fR pattern, \fB\-\-regexp\fR=\fIpattern\fR
-Specify a pattern used during the search of the input: an input
+\fB\-e\fR PATTERN, \fB\-\-regexp\fR=\fIPATTERN\fR
+Specify a PATTERN used during the search of the input: an input
 line is selected if it matches any of the specified patterns.
 This option is most useful when multiple \fB\-e\fR options are used to
-specify multiple patterns, or when a pattern begins with a dash
-(`\fB\-'\fR) or when option \fB\-f\fR is used.
+specify multiple patterns, when a pattern begins with a dash (`\fB\-'\fR),
+or when option \fB\-f\fR is used.
 .TP
 \fB\-F\fR, \fB\-\-fixed\-strings\fR
-Interpret pattern as a set of fixed strings (i.e. force ugrep to
-behave as fgrep but less efficiently).
+Interpret pattern as a set of fixed strings, separated by newlines,
+any of which is to be matched.  This forces ugrep to behave as
+fgrep but less efficiently.
 .TP
-\fB\-f\fR file, \fB\-\-file\fR=\fIfile\fR
-Read one or more newline separated patterns from file.  Empty
-pattern lines in the file are ignored.  Options \fB\-F\fR, \fB\-w\fR, and \fB\-x\fR
-do not apply to these patterns.  If file does not exist, uses
-the GREP_PATH environment variable to open file.
+\fB\-f\fR FILE, \fB\-\-file\fR=\fIFILE\fR
+Read one or more newline separated patterns from FILE.  Empty
+pattern lines in the file are not processed.  Options \fB\-F\fR, \fB\-w\fR, and
+\-x do not apply to patterns in FILE.  If FILE does not exist, uses
+the GREP_PATH environment variable to attempt to open FILE.
 .TP
-\fB\-\-file\-format\fR=\fIencoding\fR
-The input file format.  The possible values of encoding can be:
+\fB\-\-file\-format\fR=\fIENCODING\fR
+The input file format.  The possible values of ENCODING can be:
 binary ISO\-8859\-1 ASCII EBCDIC UTF\-8 UTF\-16 UTF\-16BE UTF\-16LE
 UTF\-32 UTF\-32BE UTF\-32LE CP437 CP850 CP1250 CP1251 CP1252
 CP1253 CP1254 CP1255 CP1256 CP1257 CP1258
@@ -69,7 +88,8 @@ to behave as traditional grep).
 .TP
 \fB\-g\fR, \fB\-\-no\-group\fR
 Do not group pattern matches on the same line.  Display the
-matched line again for each additional pattern match.
+matched line again for each additional pattern match, using `+'
+as separator for each additional line.
 .TP
 \fB\-H\fR, \fB\-\-with\-filename\fR
 Always print the filename with output lines.  This is the default
@@ -89,7 +109,7 @@ By default, ugrep is case sensitive.
 \fB\-k\fR, \fB\-\-column\-number\fR
 The column number of a matched pattern is displayed in front of
 the respective matched line, starting at column 1.  Tabs are
-expanded before columns are counted.
+expanded when columns are counted.
 .TP
 \fB\-L\fR, \fB\-\-files\-without\-match\fR
 Only the names of files not containing selected lines are written
@@ -104,13 +124,13 @@ been found, making searches potentially less expensive.  Pathnames
 are listed once per file searched.  If the standard input is
 searched, the string ``(standard input)'' is written.
 .TP
-\fB\-\-label\fR[=\fI\fR\fIlabel\fR]
-Displays the label value when input is read from standard input
+\fB\-\-label\fR[=\fI\fR\fILABEL\fR]
+Displays the LABEL value when input is read from standard input
 where a file name would normally be printed in the output.  This
 option applies to options \fB\-H\fR, \fB\-L\fR, and \fB\-l\fR.
 .TP
-\fB\-m\fR num, \fB\-\-max\-count\fR=\fInum\fR
-Stop reading the input after num matches.
+\fB\-m\fR NUM, \fB\-\-max\-count\fR=\fINUM\fR
+Stop reading the input after NUM matches.
 .TP
 \fB\-n\fR, \fB\-\-line\-number\fR
 Each output line is preceded by its relative line number in the
@@ -119,7 +139,10 @@ each file processed.
 .TP
 \fB\-o\fR, \fB\-\-only\-matching\fR
 Prints only the matching part of the lines.  Allows a pattern
-match to span multiple lines.
+match to span multiple lines.  Line numbers for multi\-line matches
+are displayed with option \fB\-n\fR, using `|' as separator for each
+additional line matched by the pattern.  Context options \fB\-A\fR, \fB\-B\fR,
+and \fB\-C\fR are disabled.
 .TP
 \fB\-q\fR, \fB\-\-quiet\fR, \fB\-\-silent\fR
 Quiet mode: suppress normal output.  ugrep will only search a file
@@ -132,10 +155,11 @@ their error messages are suppressed).
 .TP
 \fB\-T\fR, \fB\-\-initial\-tab\fR
 Add a tab space to separate the file name, line number, column
-number, byte offset with the matched line.
+number, and byte offset with the matched line.
 .TP
-\fB\-t\fR size, \fB\-\-tabs\fR=\fIsize\fR
-Set the tab size to 1, 2, 4, or 8 to expand tabs for option \fB\-k\fR.
+\fB\-t\fR NUM, \fB\-\-tabs\fR=\fINUM\fR
+Set the tab size to NUM to expand tabs for option \fB\-k\fR.  The value of
+NUM may be 1, 2, 4, or 8.
 .TP
 \fB\-V\fR, \fB\-\-version\fR
 Display version information and exit.
@@ -158,9 +182,9 @@ are considered to be matching lines (as if surrounded by ^ and $).
 \fB\-Z\fR, \fB\-\-null\fR
 Prints a zero\-byte after the file name.
 .TP
-\fB\-z\fR sep, \fB\-\-separator\fR=\fIsep\fR
+\fB\-z\fR TEXT, \fB\-\-separator\fR=\fITEXT\fR
 The separator between the file name, line number, column number,
-byte offset, and the line matched.  The default is a colon (`:').
+byte offset, and the matched line.  The default is a colon (`:').
 .PP
 The regular expression pattern syntax is an extended form of the POSIX ERE
 syntax.  For an overview of the syntax see README.md or visit:
@@ -195,7 +219,7 @@ on a black background.
 May be used to specify ANSI SGR parameters to highlight matches and other
 attributes when option \fB--color\fR is used.  Its value is a colon-separated
 list of ANSI SGR parameters that defaults to
-\fBmt=1;31:fn=35:ln=32:cn=32:bn=32:se=36\fR.  The \fBmt=\fR,
+\fBmt=1;31:sl=:cx=:fn=35:ln=32:cn=32:bn=32:se=36\fR.  The \fBmt=\fR,
 \fBms=\fR, and \fBmc=\fR capabilities of \fBGREP_COLORS\fR have priority over
 \fBGREP_COLOR\fR.
 .SH GREP_COLORS
